# F1tenth-RTES-FTG

./: .gitignore  CMakeLists.txt  README.md  package.xml
conf/: aula1_8.yaml  aula1_8_1.yaml  fisica.yaml  fisica_fastest.yaml  ftg_mantova.yaml  ftg_mapping.yaml  ftg_mille.yaml  mille.yaml  unity_hall.yaml
include/: ftg_node.h
include/utils/: CSpline.h  CSpline2D.h
launch/: ftg_mapping.launch.xml  ftg_node.launch.xml
src/: ftg_node.cpp
src/paths/: opt.trj  optimal.trj
src/utils/: CSpline.cpp  CSpline2D.cpp
